--- a/src/content/posts/core-d20/bestiary-drow-warrior.mdx
+++ b/src/content/posts/core-d20/bestiary-drow-warrior.mdx
@@ -53,16 +53,18 @@ ___
 >
 >***Чувствительность к солнечному свету.*** Находясь на солнечном свету, дроу совершает с помехой броски атаки и проверки Мудрости (Восприятия), основанные на зрении.
 >
->***СПЕЦИАЛЬНОЕ СНАРЯЖЕНИЕ.*** 1 зелье лечения
+>***Специальное снаряжение.*** 1 зелье лечения
 >
->***СНАРЯЖЕНИЕ*** Клепанный кожаный доспех, щит, короткий меч, ручной арбалет, колчан для болтов, 20 болтов, отравленных ядом дроу
+>***Снаряжение*** Клепанный кожаный доспех, щит, короткий меч, ручной арбалет, колчан для болтов, 20 болтов, отравленных ядом дроу
+>
 >### ДЕЙСТВИЯ
 >***Мультиатака.*** Дроу совершает две атаки коротким мечом.  
 >
->***Короткий меч.*** *Атака оружием ближнего боя:* +5 к попаданию, досягаемость 5 футов, одна цель. **Попадание:** 7 (1к6+3) колющего урона плюс 7(2к6) урона ядом.
->***Ручной арбалет.*** *Атака дальнобойным оружием:* +5 к попаданию, дистанция 30/120 футов, одна цель. **Попадание:** 6(1к6+3) колющего урона и цель должна преуспеть в спасброске Телосложения КС 13, иначе станет отравленной на 1 час. Если спасбросок провален на 5 или больше единиц, цель также лишена сознания, пока отравлена таким образом. Цель просыпается, если получает урон или другое существо разбудит её действием.
+>***Короткий меч.*** *Атака оружием ближнего боя:* +5 к попаданию, досягаемость 5 футов, одна цель. *Попадание:* 7 (1к6+3) колющего урона плюс 7(2к6) урона ядом.
+>***Ручной арбалет.*** *Атака дальнобойным оружием:* +5 к попаданию, дистанция 30/120 футов, одна цель. *Попадание:* 6(1к6+3) колющего урона и цель должна преуспеть в спасброске Телосложения КС 13, иначе станет отравленной на 1 час. Если спасбросок провален на 5 или больше единиц, цель также лишена сознания, пока отравлена таким образом. Цель просыпается, если получает урон или другое существо разбудит её действием.
 >
 >### РЕАКЦИИ
+>
 >***Парирование.*** Дроу добавляет +2(1к4) к КЗ против одной атаки ближнего боя, которая должна попасть по нему. Для этого дроу должен видеть атакующего и использовать оружие ближнего боя.
 
 ---
