--- a/src/content/posts/articles/crosspost-bloomberg-how-dm-earn-money.mdx
+++ b/src/content/posts/articles/crosspost-bloomberg-how-dm-earn-money.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Настольный консалтинг: как зарабатывают ведущие фэнтези-игр — Bloomberg"
+description: КРОССПОСТ перевода статьи от Блумберг про развитие индустрии настольных ролевых игр
 date: 2023-11-04
 tags: 
   - Кросспост
