--- a/src/content/posts/articles/ed-greenwood-about-religion-and-faith-in-forgotten-realms.mdx
+++ b/src/content/posts/articles/ed-greenwood-about-religion-and-faith-in-forgotten-realms.mdx
@@ -1,10 +1,15 @@
 ---
 title: "Эд Гринвуд про веру и религию в Забытых Королевствах"
+description: ПЕРЕВОД ответов Эда Гринвуда про веру и религию в Забытых Королевствах
 date: "2019-10-05"
-categories: 
-  - "articles"
 tags: 
-  - "proverit-rubriku"
+  - Забытые Королевства
+  - Вера
+  - Религия
+  - Поклонение
+  - Боги
+  - Эд Гринвуд
+author: Ed Greenwood
 ---
 
 > Вопрос: Я фанат «Забытых Королевств» из Китая. Наша страна — это атеистическое государство. По этой причине очень многие игроки не понимают разницы между «верованием», «поклонением» и «верой». Если «атеист» считается тем, кто никому не верит, то я начинаю беспокоиться за душу своего персонажа. Мой вопрос такой: в чем разница между «верой» и «верованиями»?
