--- a/src/content/posts/translations/ed-greenwood-about-spellbook.mdx
+++ b/src/content/posts/translations/ed-greenwood-about-spellbook.mdx
@@ -1,12 +1,14 @@
 ---
 title: "Эд Гринвуд про Книгу заклинаний"
-description: ПЕРЕВОД ответов Эда Гринвуда про веру и религию в Забытых Королевствах
+description: ПЕРЕВОД ответов Эда Гринвуда про что такое книга заклинаинй для волшебника в Забытых Королевствах
 date: "2023-11-04"
 tags: 
   - Забытые Королевства
   - Магия
   - Книга Заклинаний
   - Эд Гринвуд
+  - перевод
+  - translate
 author: Ed Greenwood
 ---
 
