--- a/src/content/posts/translations/ed-greenwood-immersea.mdx
+++ b/src/content/posts/translations/ed-greenwood-immersea.mdx
@@ -5,8 +5,10 @@ date: 2023-06-01
 tags:
   - Кормир
   - Иммерси
-  - Перевод
-  - Greenwood
+  - перевод
+  - Эд Гринвуд
+  - Забытые Королевства
+  - translate
 author: Ed Greenwood
 ---
 
