--- a/src/content/posts/sage-advice/glasswall-cover.mdx
+++ b/src/content/posts/sage-advice/glasswall-cover.mdx
@@ -145,7 +145,36 @@ First, determine whether the attack roll would have hit the protected target wit
 
 Для того чтобы объект предоставлял укрытие персонажу за ним - он должен быть достаточно прочным, чтобы атаки и эффекты воздействующие на объект не могли его разрушить одномоментно и продолжить свое движение по направлению к цели персонажу.
 
-Т.е. является ли объект укрытием - зависит от его относительной прочности по отношению к эффекту
+Т.е. является ли объект укрытием - зависит от его относительной прочности по отношению к эффекту.
+
+## ДОПОЛНЕНИЕ ОТ 05.11.2023
+
+> ### УТОЧНЕНИЕ 1. Бронированные стеклянные стены.
+>
+> Обратите внимание, что если стеклянная стена сделана из толстого бронированного стекла - то она уже будет препятствием, хотя все еще не дас "сокрытия" (сильно заслоненной местности).
+>
+> ### УТОЧНЕНИЕ 2. Дыхание драконв и прочие эффекты
+>
+> Формулировка полного укрытия, говорит о том, что существо не может быть целью атаки или заклинания, хотя может попасть под эффект заклинания если существо попадает в область воздействия заклинания.
+>
+> У некоторых игроков и мастеров возникает ощущение, что полное укрытие не даст никаких бонусов против дыхания дракона, поскольку в описании полного укрытия нет никаких упоминаний прочих эффектов. И они все еще не совсем корректно интерпретируют написанный текст.
+>
+> То, что укрытие помогает против дыхания дракона - прямо определено в определении укрытия - поскольку защищает от вредных эффектов, источник которых находится с другой стороны от укрытия, нежели персонаж.
+>
+> А в тексте полного укрытия не говорится о "прочих эффектах", лишь потому, что необходимо было уточнение именно про воздействие заклинания - поскольку первый абзац мог быть понят как полная защита от атак и заклинаний.
+>
+> ### УТОЧНЕНИЕ 3. 
+> 
+> Как определить эффект от полного укрытия,  если во время осуществления какого либо воздействуюшего эффекта - значения и особенностей эффекта достаточно для полного уничтожения препятствия? Как, например. в случае огненного дыхания древнего красного дракона  и толстой промоченного водой деревянной стены?
+>
+> Рассказываю. По моему мнению, если укрытие не может остановить эффект полностью - будучи разрушенным в процессе ослабления эффекта - то частичное укрытие объект уже обеспечил согласно буквально первому предложению в определении укрытия. Следовательно,  я бы определил эффект от укрытия как эффект от укрытия на половину - если препятствие смогло поглотить менее половины урона от эффекта, или как эффект от укрытия пна три четверти, если препятствие смогло поглотить более половины урона от эффекта.
+>
+> ### УТОЧНЕНИЕ 4. Укрытие в ПФ2
+>
+> Как ни странно, в ПФ2 сделали неплохую работу в части укрытия сформулировав в разделе правил особенности препятствия. Но про это я расскажу в следующей статье.
+
+
+
 
 ---
 
