--- a/src/content/posts/sage-advice/glasswall-cover.mdx
+++ b/src/content/posts/sage-advice/glasswall-cover.mdx
@@ -172,6 +172,12 @@ First, determine whether the attack roll would have hit the protected target wit
 > ### УТОЧНЕНИЕ 4. Укрытие в ПФ2
 >
 > Как ни странно, в ПФ2 сделали неплохую работу в части укрытия сформулировав в разделе правил особенности препятствия. Но про это я расскажу в следующей статье.
+> 
+> ### УТОЧНЕНИЕ 5. Слово "ПРЕПЯТСТВИЕ" - является КЛЮЧЕВЫМ
+>
+> Получил еще одно интересное наблюдение. с момента публикации статьи 27 сентября и по текущий день - 5 ноября 2023 года - люди постоянно норовят игнорировать слово ПРЕПЯТСТВИЕ, которое наличиствует в описании укрытия. И, да, термин ПРЕПЯТСТВИЕ в правилах не определен - но понять что является препятствие - весьма легко. Если вы считаете что белая скатерть 6 х 6 футов - является основанием для получения полного укрытия - то, скажите мне, пожалуйста, вы готовы использовать ее как укрытие, а по вам будут стрелять из арбалета.
+> В случае полного укрытия - на котором люди часто настаивают - им ничего не грозит. 
+> А если они не хотят рисковать - значит, понимают что аргумент - "скатерь = полное укрытие" - глупость.
 
 
 
