--- a/src/content/posts/translations/brandesstoddard-about-medium-armors-in-dnd-5e.mdx
+++ b/src/content/posts/translations/brandesstoddard-about-medium-armors-in-dnd-5e.mdx
@@ -3,10 +3,18 @@ title: "Брандес Стоддард - D&D 5e: Средний доспех"
 description: "ПЕРЕВОД статьи Брандеса Стоддарда про средние доспехи в пятой редакции #dnd5e #armor #mediumarmor #translate"
 date: 2023-11-05
 tags:
-  -example
-author: example
-translator: example
-cover: example
+  - Brandes Stoddard
+  - translate
+  - перевод
+  - D&D 5e
+  - D&D 3e
+  - D&D 4e
+  - AD&D 2e
+  - Доспехи
+  - Снаряжение
+  - Core d20 RPG
+author: Brandes Stoddard
+translator: Антон "Palant" Палихов
 --- 
 
 [28 Янв, 2019 ](https://www.brandesstoddard.com/2019/01/dd-5e-medium-armor/)
@@ -30,7 +38,7 @@ cover: example
 ## 3.x
 3.0 привнесла в таблицу доспехов множество нововведений: формальное разделение на легкие, средние и тяжелые доспехи, максимальный бонус к ловкости, штрафы за проверку доспехов, применяемые ко всем навыкам, провал мистических заклинаний (так что вы могли произносить заклинания в доспехах, если были готовы рискнуть потерей заклинания), штрафы за передвижение для средних и тяжелых доспехов.
 
-
+![](https://cyborgsandmages.com/images.Armor-table-3-5-SRD.jpg)
 
 Это таблица доспехов из 3.5e, но существенных различий между ней и 3.0, насколько я помню, нет. В любом случае, для средних доспехов здесь важно следующее:
 
@@ -63,6 +71,8 @@ cover: example
 ## 5e
 
 Все это подводит нас, наконец, к 5e.
+
+![](https://cyborgsandmages.com/images.Armor-table-5es-SRD.jpg)
 
 Еще один ключевой момент, который необходимо знать, выходя за рамки этой таблицы, - это Medium Armor Master. Эта черта увеличивает предел модификатора ловкости для средних доспехов на 1 и избавляет от Помеха при проверке скрытности для средних доспехов. Давайте посмотрим, что это дает само по себе.
 
