--- a/src/content/posts/translations/monte-cook-designing-for-bleep.mdx
+++ b/src/content/posts/translations/monte-cook-designing-for-bleep.mdx
@@ -1,5 +1,5 @@
 ---
-title: Проектирование для [Bleep]
+title: Проектирование для Bleep
 description: ПЕРЕВОД статьи Монте Кука про проектирование систем правил НРИ
 date: 2023-12-01
 tags:
