--- a/src/content/posts/core-d20/about-weapon-mastery.mdx
+++ b/src/content/posts/core-d20/about-weapon-mastery.mdx
@@ -1,6 +1,6 @@
 ---
-title: Мысли вслух про систему оружейного мастерства в пятой редакции
-description: АВТОРСКАЯ статья про систему оружейного мастерства в пятой редакциии и реализацию диверсификации оружия в различных хаках пятой редакции, в т.ч. в нашем
+title: Мастерство владения оружием в разных редакциях
+description: ПЕРЕВОД статьи про систему оружейного мастерства в пятой редакциии и реализацию диверсификации оружия в различных хаках пятой редакции и BECMI
 date: 2023-12-08
 tags:
   - D&D 5e
